Fix for bug 77053. Add some code to detect url redirection to avoid to abort the download while fetching attachment. Also fix a crash due to a release make at the wrong time. R=varada, SR=bienvenu