mailnews/compose/src/nsURLFetcher.h
@@ -32,6 +32,7 @@
 #include "nsCURILoader.h"
 #include "nsIURIContentListener.h"
 #include "nsIWebProgressListener.h"
+#include "nsIHTTPEventSink.h"
 #include "nsWeakReference.h"
 
 
@@ -40,6 +41,7 @@ class nsURLFetcher : public nsIURLFetcher,
                      public nsIURIContentListener, 
                      public nsIInterfaceRequestor,
                      public nsIWebProgressListener,
+                     public nsIHTTPEventSink,
                      public nsSupportsWeakReference
 { 
 public: 
@@ -67,6 +69,9 @@ public:
   // Methods for nsIWebProgressListener
   NS_DECL_NSIWEBPROGRESSLISTENER
 
+  // Methods for nsIHTTPEventSink
+  NS_DECL_NSIHTTPEVENTSINK
+
 private:
   nsOutputFileStream              *mOutStream;    // the output file stream
   PRBool                          mStillRunning;  // Are we still running?
@@ -77,6 +82,7 @@ private:
   nsAttachSaveCompletionCallback  mCallback;      // Callback to call once the file is saved...
   nsCOMPtr<nsISupports>           mLoadCookie;    // load cookie used by the uri loader when we fetch the url
   PRBool                          mOnStopRequestProcessed; // used to prevent calling OnStopRequest multiple times
+  PRBool                          mRedirection;   // Set when we get a redirection, should ignore stop message.
 }; 
 
 #endif /* nsURLFetcher_h_ */
